@@ -541,8 +541,9 @@ else
 	done
 endif
 
+EXTRA_PKGS=
 rinstaller:
-	$(MAKE) -C installer
+	$(MAKE) -C installer EXTRA_PKGS='$(EXTRA_PKGS)'
 	$(MAKE) -C installer clean
 
 crandir:
